<resources>
    <string name="app_name">DD</string>
    <string name="activ_main_title">Profile</string>
    <string name="activ_dict_title">Dictionary</string>
    <string name="activ_less_title">Lesson</string>
    <string name="txv_word">Word</string>
    <string name="emsg_edit_required"> is required!</string>
    <string name="emsg_edit_inv_char"> contains an invalid character!</string>
    <string name="emsg_only_ger">must be in German!</string>
    <string name="emsg_only_rus">must be in Russian!</string>
    <string name="emsg_check_wrong">wrong!</string>
    <string name="tmsg_check_true">right!</string>
    <string name="txv_trans">Translation</string>
    <string name="btn_add_word">Add words</string>
    <string name="btn_lesson">Lesson</string>
    <string name="btn_add">Add</string>
    <string name="btn_check">Check</string>
    <string name="txv_words_added">Words added</string>
    <string name="txv_word_add_counter">0</string>
    <string name="txv_words_studied">Words studied</string>
    <string name="txv_word_std_counter">0%</string>
    <string name="fmsg_word_added">Word added</string>
    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="message_text">Text of your message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
</resources>
