<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#B6B6B6">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <TextView
            style="@style/TxtViewDict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txv_word"
            android:id="@+id/label_world">
        </TextView>

        <EditText
            android:id="@+id/etWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <requestFocus>
            </requestFocus>
        </EditText>

        <TextView
            style="@style/TxtViewDict"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_trans"
            android:gravity="center">
        </TextView>

        <EditText
            android:id="@+id/etTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#FFFFFF">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_container"
        android:background="#FFFFFF">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                style="@style/TxtViewArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:enabled="false"
                android:layout_marginTop="20dp"
                android:id="@+id/txv_article"
                 />

            <TextView
                style="@style/TxtViewArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:enabled="false"
                android:layout_marginTop="20dp"
                android:id="@+id/txv_ger_result" />
        </LinearLayout>

        <TextView
            style="@style/TxtViewArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:enabled="false"
            android:layout_marginTop="20dp"
            android:id="@+id/txv_rus_result" />

    </LinearLayout>

</LinearLayout>